# tortoise

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
scripts/: drop_consumer_jobs.lua  job_search.lua  job_search_group.lua
src/: consumer.rs  job.rs  lib.rs  queue.rs  scripts.rs
tests/: basic.rs  garbage.rs  job.rs  redundancy.rs
