[package]
name = "tortoise"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
redis = { version = "0.27.4", features = ["aio", "script", "tokio-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
